                        GPSD project news

3.25.1~dev: WIP

3.25: 2022-10-09
  Have ubxtool "-w 0" run forever.
  Bump libgps version to 30.0
  Change fixsource_t, store server locally, make pointers const.
  Move gpsd_hexpack() to gps.h as gps_hexpack()
  Move gpsd_hexdump() to gps.h as gps_hexdump()
  Allow gpsctl -s/--ship to work without -f.
  Grab prRes and quality from u-blox 8+, into JSON, then into xgps.
  New GPSD-MIB, installed in share/mibs/gpsd.
  gpssnmp supports GPSD-MIB in pass and pass_persist modes
  Add decodes for NMEA $xxHDM, $xxROT and $xxXDR
  Add Magnetic Heading (mheading) and Rate of Rotation (rot) to attitude_t
  Allow NTP time from gpsd://, tcp:// and udp:// sources
  Add the -B, --nobuffer, option to gpspipe.
  gpsd opens $RUNDIR/chrony.clk.XXX.sock to supply serial time to chronyd.
  Add -g and --garmin options to gpxlogger for depth.
  Add -F and --filein options to gpxlogger to read GPSD JSON from a file.

3.24: 2022-04-22
  NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
  Remove ntrip option and NTRIP_ENABLE.  Always build.
  Remove passthrough option and PASSTHROUGH_ENABLE.  Always build.
  Remove nmea0183 option and NMEA0183_ENABLE.  Always build.
  Remove netfeed option and NETFEED_ENABLE.  Always build.
  gpsd will retry ntrip:// and tcp:// connections
  cgps can expand to show more sats. Added --rtk option.
  maidenhead() checks for input errors.
  Better SHM logs.
  PPS and TOFF JSON now include shm used, and real precision.
  Add initial, untested, TSIPv1 support
  split debug messages into different syslog() levels.
  New ppscheck options, and can use /dev/ppsX devices.
  First try at TSIPv1 protocol decodes.
  Decode Quectel $PQVERNO for firmware version
  Decode Skytrak PX1172RH_DS messages.

3.23.1: 2021-09-21
  Improve ubx cycle detection.
  Add quirks for Jackson Labs nonstandard NMEA
  Change STATUS_NO_FIX to STATUS_UNK to avoid confusion with fix mode.